Fix QA section title styling on smaller screens

--- a/src/v1.1/components/QASection/qaSection.sass
+++ b/src/v1.1/components/QASection/qaSection.sass
@@ -25,3 +25,9 @@
     padding-top: 50px
     &__title
       padding-left: $hspace-xxs
+
+// XXXSmall
++render-to($media-xxxs)
+  .qaSection
+    &__title
+      padding-left: $hspace-xxxs
